# GeometricVector

./: README.md
include/: CMakeLists.txt  geo_basic.h  geo_interval.h  geo_iter.h  geo_pow.h  geo_vector.h
test/: CMakeLists.txt  main.cc
